# alisten

./: .dockerignore  .gitignore  README.md  chat.go  compose.yml  config.json.example  context.go  go.mod  go.sum  house.go  main.go  music.go  music_controller.go  musiclet-compose.yml  musiclet-config.json  musiclet-config.json.example  musiclet-deploy.md  songlist.go
.github/workflows/: docker.yml  go.yml
cmd/alisten/: chat.go  context.go  house.go  main.go  music.go
cmd/musiclet/: Dockerfile  main.go
cmd/musiclet-py/: README.md  client.py  config.json.example  config.py  database.py  downloader.py  main.py  pyproject.toml  requirements.txt  task.py
cmd/musiclet-py/src/musiclet/: __main__.py  client.py  config.py  database.py  downloader.py  task.py
cmd/musiclet/bihua/: db.go
cmd/musiclet/bilibili/: bilibili.go  model.go
docker/: alisten.Dockerfile  musiclet-py.Dockerfile  musiclet.Dockerfile
docs/: deploy.md
internal/auth/: md5.go  user.go
internal/base/: config.go
internal/music/: cache.go  music.go  netease.go  qq.go  recommand.go  search.go
internal/music/bihua/: db.go  insert_test.go  model.go
internal/music/bilibili/: bilibili.go  model.go
internal/music/kuwo/: client.go  download.go  utils.go
internal/music/netease/: client.go  crypto.go  download.go  lyrics.go  playlist.go  search.go
internal/music/qq/: client.go  lyrics.go  search.go
internal/music/types/: music.go
internal/music/utils/: http.go
internal/semver/: semver.go  semver_test.go
internal/syncx/: channel.go
internal/task/: client.go  server.go  task.go
music/: music.go  netease.go  qq.go
music/kuwo/: client.go  utils.go
